# mthesisexperimentcontroller

./: .gitignore  main.py  pixi.toml  readme.md
dashboard/: Cargo.toml
dashboard/src/: main.rs  types.rs
dashboard/src/components/: camera.rs  mod.rs  save.rs  vibration.rs
