[package]
name = "dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
iced = { version = "0.14.0", features = ["canvas", "hot", "image", "tokio", "wgpu"] }
image = "0.25.9"
polars = { version = "0.53.0", features = ["csv"] }
rumqttc = "0.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
